Impelement the code push

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,10 +34,10 @@ react {
     // bundleConfig = file(../rn-cli.config.js)
     //
     //   The name of the generated asset file containing your JS bundle
-    // bundleAssetName = "MyApplication.android.bundle"
+    // bundleAssetName = "CodeDemoPushlication.android.bundle"
     //
     //   The entry file for bundle generation. Default is 'index.android.js' or 'index.js'
-    // entryFile = file("../js/MyApplication.android.js")
+    // entryFile = file("../js/CodeDemoPushlication.android.js")
     //
     //   A list of extra flags to pass to the 'bundle' commands.
     //   See https://github.com/react-native-community/cli/blob/main/docs/commands.md#bundle
@@ -84,10 +84,20 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+             if (project.hasProperty('CodeDemoPush_UPLOAD_STORE_FILE')) {
+                storeFile file(CodeDemoPush_UPLOAD_STORE_FILE)
+                storePassword CodeDemoPush_UPLOAD_STORE_PASSWORD
+                keyAlias CodeDemoPush_UPLOAD_KEY_ALIAS
+                keyPassword CodeDemoPush_UPLOAD_KEY_PASSWORD
+            }
+        }  
+        release {
+            if (project.hasProperty('CodeDemoPush_RELEASE_STORE_FILE')) {
+                storeFile file(CodeDemoPush_RELEASE_STORE_FILE)
+                storePassword CodeDemoPush_RELEASE_STORE_PASSWORD
+                keyAlias CodeDemoPush_RELEASE_KEY_ALIAS
+                keyPassword CodeDemoPush_RELEASE_KEY_PASSWORD
+            }
         }
     }
     buildTypes {
@@ -97,7 +107,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
@@ -116,3 +126,4 @@ dependencies {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
