--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,3 +39,7 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+CodeDemoPush_RELEASE_STORE_FILE=CodeDemoPush.keystore
+CodeDemoPush_RELEASE_KEY_ALIAS=CodeDemoPush-keystore
+CodeDemoPush_RELEASE_STORE_PASSWORD=CodeDemoPush
+CodeDemoPush_RELEASE_KEY_PASSWORD=CodeDemoPush
